[project]
name = "brownfield-cartographer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "gitpython>=3.1.46",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "sqlglot>=29.0.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-sql>=0.3.11",
    "tree-sitter-yaml>=0.7.2",
    "typer>=0.24.1",
]
